syntax = "proto3";

package userCenterClient;